<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softyellow"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/robo"
        android:text="@string/mis_tareas"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCorreo"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cajaCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/softyellow"
            android:hint="@string/hintCorreo"
            android:textColorHint="@color/turquoise"
            android:textSize="16sp" />

        <requestFocus/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPass"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCorreo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cajaPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/softyellow"
            android:hint="@string/hintPass"
            android:inputType="textPassword"
            android:textColorHint="@color/turquoise"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="72dp"
        android:text="@string/textLogin"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPass" />

    <TextView
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/account"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonLogin" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="131dp"
        android:layout_height="168dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/notebook" />


</androidx.constraintlayout.widget.ConstraintLayout>